# statmoments

./: .codecov.yml  .dockerignore  .env  .gitignore  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  wheels.yml
examples/: bivar.py  univar.py
statmoments/: GIT_VERSION.txt  __init__.py  _build_config.py  _native.pxd  _native.pyx  _native.pyxbld  _native_shim.py  _statmoments_impl.py  bivar.py  common.py  stattests.py  univar.py
statmoments/benchmark/: __main__.py  bench_bivar.py  benchlib.py
statmoments/tests/: __main__.py  test_bivar.py  test_common.py  test_connect.py  test_stattest.py  test_univar.py
