[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cython",
    "numpy>=1.17,<2",
    "scipy<=1.15",
    # "cupy-cuda12x",  # Optional CUDA support
    # "nvmath-python"  # Optional CUDA support
]
build-backend = "setuptools.build_meta"

[project]
name = "statmoments"
version = "1.1.1"
description = "Streaming statistical moments"
requires-python = ">=3.6"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Anton Kochepasov"}
]
keywords = [
    "data-science",
    "univariate",
    "bivariate",
    "statistics",
    "streaming",
    "numpy",
    "vectorization"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "numpy>=1.17,<2",
    "scipy<=1.15",
    "h5py",
    "psutil",
    "cython",
    # "pywin32;platform_system=='Windows'"
]

[tool.setuptools.dynamic]
version = {attr = "statmoments._version.__version__"}

[project.urls]
"Source Code" = "https://github.com/akochepasov/statmoments/"
"Issues" = "https://github.com/akochepasov/statmoments/issues"

# [project.optional-dependencies]
# cuda = [
#     "cupy-cuda12x",
#     "nvmath-python"
# ]