[project]
name = "statmoments"
dynamic = ["version"]
description = "Fast streaming single-pass univariate/bivariate statistics and t-test"
requires-python = ">=3.8"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Anton Kochepasov", email = "akss@me.com"}
]
keywords = [
    "data-science",
    "univariate",
    "bivariate",
    "skewness",
    "kurtosis",
    "coskewness",
    "cokurtosis",
    "statistics",
    "streaming",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Social Science",
]

# Core runtime dependencies
dependencies = [
    "numpy>=1.17,<2",
    "scipy<=1.15",
    "h5py",
    "psutil",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cython",
    "numpy>=1.17,<2",
    "scipy<=1.15",
]

build-backend = "setuptools.build_meta"

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x",
    "nvmath-python"
]

# Development dependencies
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "statmoments[gpu]",
    "Cython>=0.29",
    "build",
    "wheel",
]

[project.urls]
"Source Code" = "https://github.com/akochepasov/statmoments/"
"Issues" = "https://github.com/akochepasov/statmoments/issues"

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["statmoments*"]

[tool.setuptools.dynamic]
version = {attr = "statmoments._version.__version__"}

[tool.setuptools.package-data]
statmoments = ["*.pyx", "*.pxd", "*.pyd", "*.so", "GIT_VERSION.txt"]

# Tool configurations

[tool.pytest.ini_options]
testpaths = ["statmoments/tests"]
python_files = ["test_*.py"]
addopts = "-v"
# To run with coverage: pytest --cov=statmoments --cov-report=term-missing

[tool.coverage.run]
source = ["statmoments"]
omit = ["*/tests/*", "*/benchmark/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]