[project]
name = "statmoments"
dynamic = ["version"]
description = "Fast streaming single-pass univariate/bivariate statistics and t-test"
requires-python = ">=3.8"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Anton Kochepasov", email = "akss@me.com"}
]
keywords = [
    "data-science",
    "univariate",
    "bivariate",
    "skewness",
    "kurtosis",
    "coskewness",
    "cokurtosis",
    "statistics",
    "streaming",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Social Science",
]

# Core runtime dependencies
dependencies = [
    "numpy>=1.17,<2",
    "scipy<=1.15",
    "h5py<=3.11",
    "psutil<=5.9",
]

[build-system]
requires = [
    "setuptools>=61,<77",
    "wheel",
    "Cython>=0.29",
    "numpy>=1.17,<2",
    "scipy<=1.15",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

gpu = [
    "cupy-cuda12x",
    "nvmath-python"
]

# Development dependencies
dev = [
    "statmoments[test]",
    "statmoments[gpu]",
    "Cython>=0.29",
    "build",
    "wheel",
]

[project.urls]
Homepage = "https://github.com/akochepasov/statmoments"
Documentation = "https://github.com/akochepasov/statmoments#readme"
"Source Code" = "https://github.com/akochepasov/statmoments"
"Issue Tracker" = "https://github.com/akochepasov/statmoments/issues"

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["statmoments*"]

[tool.setuptools.dynamic]
version = {attr = "statmoments._version.__version__"}

[tool.setuptools.package-data]
statmoments = ["*.pyx", "*.pxd", "*.pyxbld", "GIT_VERSION.txt"]

# Tool configurations

[tool.pytest.ini_options]
testpaths = ["statmoments/tests"]
python_files = ["test_*.py"]
addopts = "-v"
# To run with coverage: pytest --cov=statmoments --cov-report=term-missing

[tool.coverage.run]
branch = true
relative_files = true
source = ["statmoments"]
omit = [
    "*/tests/*",
    "*/benchmark/*",
    "*/examples/*",
    "statmoments/_native.pyx",
    "statmoments/_version.py",
]

[tool.coverage.paths]
source = [
    "statmoments",
    "*/site-packages/statmoments",
    "*\\site-packages\\statmoments",
]

[tool.coverage.report]
fail_under = 40
precision = 2
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
