[metadata]
description = Fast streaming bivariate statistics and t-test
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  Intended Audience :: Financial and Insurance Industry
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Cython
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Image Processing
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Physics
keywords = data-science,univariate,bivariate,statistics,streaming,numpy,vectorization
platforms = any

[options]
zip_safe = False
install_requires =
  h5py
  numpy
  scipy
  psutil

setup_requires =
  cython

[flake8]
ignore = E111,E114,E226,E231,E241,E272,E221
per-file-ignores =
	__init__.py: F401
	_statmoments_impl.py: F401
	_native_shim.py:  E402,F401,F403
	bench_bivar.py:   E121,E122,E201,E262,E265
  examples/bivar.py:  F841
  examples/univar.py: F841
exclude =
	.git,
	__pycache__,
	build
max-line-length = 160
statistics = yes

[pep8]
ignore = E111,E114,E226,E231,E241,E272,E221
max-line-length = 160
statistics = yes

# E402 module level import not at top of file
# E272 Multiple spaces before the keyword
# E241 Multiple spaces after comma
# E201 Whitespace after [
# E221 Multiple spaces before operator
# E262 Inline comment should start with #
# E111 Indentation is not a multiple of four
# E114 Indentation is not a multiple of four (comment)
# E226 Missing whitespace around arithmetic operations